[workspace]
members = ["api", "client", "infapi"]

default-members = ["api"]
resolver = "2"

exclude = [
	"git*"
]

[workspace.package]
name = "perf-log"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3" 
clap = { version = "4.5", features = ["env", "derive"] }
